2005-11-28  Andrew Cagney  <cagney@redhat.com>

	* Makefile.gen.sh (GEN_NODIST): Define.
	(.g): For .g files generate BUILT_SOURCES, GEN_NODIST, CLEANFILES,
	and rule.
	
	* Makefile.gen.sh (.fig): Add .fig files to EXTRA_DIST.

	* acinclude.m4 (AC_PROG_CXX, AC_PROG_CC): Provide explict list.
	(AC_CHECK_PROGS([GCJ])): Add, hacks around AM_PROG_GCJ breakage.
	(AC_CHECK_PROGS([JAR]), AC_CHECK_PROGS([GCJH]),
	AC_CHECK_PROGS([GCJ_DBTOOL])): Add.
	* Makefile.rules (GCJH): Delete definition; defined by
	acinclude.m4.
	(.jar.db): Replace gcj-dbtool with $(GCJ_DBTOOL).
	

2005-11-26  Andrew Cagney  <cagney@redhat.com>

	* acinclude.m4 (JAVACFLAGS): For gcj, use -classpath not
	-sourcepath.

2005-11-25  Andrew Cagney  <cagney@redhat.com>

	* Makefile.gen.sh ($(dir).jar): Use $(JAR).

	* acinclude.m4 (JAVAC): Default to GCJ.
	(JAR): Check for jar/fastjar.

	* Makefile.gen.sh: When making .jar targets in sub-directories, do
	not specify name of .jar file.

2005-11-22  Stan Cox  <scox@multics.rdu.redhat.com>

	* TestRunner.sh: Add -log option.

2005-11-22  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (distclean-cvsignored): New target; delete
	anything listed in .cvsignore.
	
	* Makefile.rules (.javain.java): Set VERSION.

	* version.ac: New file.  Move version.in logic to here.

	* version.in: New file, moved from top-level.

2005-11-21  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (.java.classes): Delete rule.
	* Makefile.gen.sh: Do not generate .classes.o dependency.  Do not
	add a .java file to GEN_SOURCES when there is a .javain.

	* Makefile.gen.sh ($(GEN_CLASSDIR)/files): Only add files starting
	with a letter.

	* Makefile.gen.sh ($(GEN_CLASSDIR)/files): Ignore '*#*' files.

2005-11-16  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (gij.sh): Append any existing CLASSPATH value to
	the frysk CLASSPATH.
	(GEN_GCJ_RPATHS): Strip out trailing <</./>>.

2005-11-16  Igor Foox  <ifoox@redhat.com>
